--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,6 +56,8 @@
         "text_encoding": "cpp",
         "thread": "cpp",
         "typeinfo": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "cstdarg": "cpp",
+        "map": "cpp"
     }
 }
